# micro_complaints

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  mailServerFile
server/: Cargo.toml  Dockerfile  README.md  slumber.yml
server/.sqlx/: query-1aca90c3e3d155e867f0d9ddbe7e088350c0e513e925ee987cb2b45fc5041fd0.json  query-23f9e2d45c56d4d86103c154565b6f5884c879f327557cbe607722dbffa36a92.json  query-47f284f01b5952f9df38504bd1ee1618c0bbe6d0cd06190c578e5759779f142e.json  query-748f48a2875a1cbb1124e9bf80e97ff196466c5b808c4efc273f87b58a7857f8.json  query-7d40258c928889fa1dc0b3dde49ec6b7270a2347a561537b163c7a84bb66cbd1.json  query-a6f028eefb8aa8c36554a27fdb422c8acd2ed29d8510e58d297eb52521de02ea.json  query-c50bc98dd5bcaac552f6b542ade83e308e4b795f851c2287e77897956a93dc48.json  query-cfce89363ae03b269607336b98123b2f0228ba6cc217b643303ee407b196f6aa.json  query-d37dc0b492ef18c6f9fd2c378ad71aee3d2698ad68b8f2c8c28cab06e75944a1.json  query-d9344d93c61f6e1cc96f680e301955c09e2c360fcfb1cc4bf18bf58ec7d23b9f.json  query-db3c23c47a38fa788d9a193694d8a61e3db6bb84d7b4769ea94936b68e05a491.json  query-e2682ff8f67f2c5c07fb5e0774f1543b8ee939e12c65b52166ebced6761a5721.json  query-e747961a3eacde47555d58c78c5c1cdac3e724afbb081c2aa9a11c03f099cbcd.json  query-f8ea6359d0ac799da3fbb8e285e63c56e193f889389b42ed0413d2aef4207396.json
server/migrations/: 0_user.down.sql  0_user_up.sql  1.complaints.down.sql  1_complaints.up.sql  20240427233711_complaints.up.sql  20240427233734_user.up.sql  complaints.sql
server/src/: auth.rs  complaints.rs  config.rs  lib.rs  main.rs  model.rs
(+65 files in other folders)
