[package]
name = "micro_complaints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.1"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "chrono",
    "uuid",
    "runtime-async-std",
] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4"] }
jsonwebtoken = "9.3.0"
